--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </style>
   <body>
     <div class="container">
-      <form method="post" action="" name="contact-form">
+      <form method="post" action="https://script.google.com/macros/s/AKfycbz3MIbzukmqPxPnRQi6yYZnY8oR7rG8fofrkpYTa-TOtXu0LbgYkUuy30uKlnjywxyG/exec" name="contact-form">
         <h4>Contact Us</h4>
         <input type="text" name="your-name" placeholder="Name" />
         <input type="text" name="your-number" placeholder="Number" />
@@ -67,7 +67,7 @@
   </body>
   <script>
     const scriptURL =
-      "https://script.google.com/macros/s/AKfycbw4hJWF2X4NZlRJKGzgITe1JCaPKaawyFylkxZdVbOKCWes44Drn33VadjJ25SvzK7-/exec";
+      "https://script.google.com/macros/s/AKfycbz3MIbzukmqPxPnRQi6yYZnY8oR7rG8fofrkpYTa-TOtXu0LbgYkUuy30uKlnjywxyG/exec";
 
     const form = document.forms["contact-form"];
 
